# dpllSAT

./: CMakeLists.txt  DPLL.cpp  DPLL.h  DimacsParser.h  Readme.md  common.h  main.cpp
